# ENTAERA

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  AI_CHAT_SYSTEMS_GUIDE.md  API_SETUP_GUIDE.md  AZURE_SETUP_GUIDE.md  BULLETPROOF_SETUP_GUIDE.md  BULLETPROOF_TEST_SUITE.md  CHANGELOG.md  CHAT_SUCCESS_REPORT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  Dockerfile.alpine  ENHANCEMENT_STRATEGY.md  ENTAERA_PROJECT_COMPLETE_STORY.md  GITHUB_SETUP_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  INSTALLATION.md  LICENSE  MODEL_ARCHITECTURE_GUIDE.md  README.md  RESEARCH.md  SECURITY.md  SECURITY_REPORT.md  UPDATE_EXISTING_REPO.md  bulletproof_n8n_workflow.json  chat_with_ai.py  check_perplexity_models.py  cli.py  complete_replacement_fixed.ps1  create-and-commit.bat  create-and-commit.ps1  create-and-commit.ps1.bak  demo_conversation.py  demo_logging.py  demo_semantic_search.py  docker-compose.prod.yml  (+31 more)
.github/: CODEOWNERS  FUNDING.yml  branch-protection.yml  config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  release.yml  stale.yml  update-dependencies.yml
VertexAutoGPT/: LICENSE  README.md  RESEARCH.md
archive/: FINAL_SETUP_INSTRUCTIONS.md  FINAL_TEST_SUMMARY.py  FIXED_ERROR_CHECK_LOGIC.md  GOOGLE_DRIVE_SETUP.md  N8N_COMPLETE_PRODUCTION_GUIDE.md  N8N_FIXED_IMPORT_GUIDE.md  N8N_IMPORT_GUIDE.md  N8N_TROUBLESHOOTING.md  PHASE1_IMPLEMENTATION.md  QUICK_FIX_ERROR_RESPONSE.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  canvas_validation.py  manual_test.py  phase1_validation.py  simple_validation.py  test_data_processing.py  test_n8n_integration.py  test_runner.py  test_summary.py
archive/old_n8n_attempts/: n8n_batch_processor.bat  n8n_cmd_process.bat  n8n_debug_command.json  n8n_debug_complex.json  n8n_debug_processor.py  n8n_debug_python.json  n8n_diagnostic.json  n8n_direct_processor.py  n8n_final_solution.json  n8n_googledrive_solution.json  n8n_http_processor.py  n8n_http_solution.json  n8n_integration.py  n8n_minimal_test.json  n8n_process.bat  n8n_process.ps1  n8n_process_webhook.bat  n8n_processor.bat  n8n_processor_file.py  n8n_robust_processor.bat  n8n_simple_pipe.bat  n8n_simple_processor.py  n8n_stdin_process.ps1  n8n_stdin_processor.py  n8n_template_test.json  n8n_ultra_robust_processor.py  n8n_webhook_processor.py  n8n_workflow_batch_method.json  n8n_workflow_compatible.json  n8n_workflow_complete_production.json  n8n_workflow_expression_fixed.json  n8n_workflow_final_working.json  n8n_workflow_fixed.json  n8n_workflow_network_fixed.json  n8n_workflow_simple.json  n8n_workflow_simple_fixed.json  n8n_workflow_template.json  n8n_workflow_working.json  n8n_working_solution.json  quick_test.ps1  (+5 more)
config/: README.md
data/: 2025-09-15_04-39-04_output.json  summary_201a684b.json
data/`/: .json
data/summary/: 00aa1428.json  04293e31.json  0ca0b944.json  1aaa7f03.json  1db2713a.json  201a684b.json  242a16a2.json  257f7a9c.json  2bace783.json  2c2cdffc.json  3114917a.json  39c25266.json  3d5666ac.json  4656caef.json  67a0c6d3.json  705c1f1d.json  7114a276.json  71ffc766.json  74051f4f.json  745afc0e.json  79b3f6ae.json  7dc5b1cd.json  802e17ee.json  9321cd5b.json  96a8565e.json  97d1cdaf.json  9b69f856.json  9efd0e60.json  a1a66eee.json  a7c15133.json  a8bac120.json  aa1a9373.json  ae1e63e7.json  b345816d.json  b61b2da5.json  b7311a04.json  b8ae256a.json  bb75fdac.json  bdb42762.json  be8404f4.json  (+37 more)
demos/: README.md  azure_continuous_test.py  entaera_api_chat_demo.py  entaera_interactive_chat.py  entaera_live_api_demo.py  entaera_simple_chat.py  simple_demo.py  test_entaera_apis_complete.py  test_final_ai.py  test_local_ai.py  validate_implementation.py  working_ai_chat.py
docs/: ENTAERA_API_REFERENCE.md  ENTAERA_ARCHITECTURE_GUIDE.md  ENTAERA_COMPREHENSIVE_DOCUMENTATION.md  ENTAERA_DEPLOYMENT_GUIDE.md  ENTAERA_FAQ.md  ENTAERA_QUICKSTART_GUIDE.md  README.md  day2-kata-summary.md  day3-kata-summary.md  installation.md  schema.json  troubleshooting.md
examples/: README.md
examples/basic_usage/: configuration.py  hello_world.py
scripts/: README.md  complete_replacement.ps1  day2_demo.py  replace_and_enhance_repo.ps1  simple_replacement.ps1  update_existing_repo.ps1  upload_to_github.ps1  upload_to_saurabhcodesai.ps1
src/: .main.py  cli.py  utils.py
src/entaera/: __init__.py
src/entaera/core/: agent_orchestration.py  code_analysis.py  code_execution.py  code_generation.py  code_optimization.py  config.py  context_injection.py  context_retrieval.py  conversation.py  (+3 more)
tests/: __init__.py
tests/e2e/: __init__.py  test_e2e_workflow.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_cli.py  test_data_processing.py  test_day2_kata.py  test_file_operations.py
tools/: README.md  azure_monitor.py  rebrand_to_entaera.py  revert_to_entaera.py  update_ai_name_to_enatera.py
(+9 files in other folders)
